# GroundTruth-Solana

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
apps/backend/: package.json  tsconfig.json  vitest.config.ts
apps/backend/prisma/: schema.prisma  seed.ts
apps/backend/src/: index.ts  server.ts
apps/backend/src/__tests__/: setup.ts
apps/backend/src/__tests__/crypto/: hash.test.ts
apps/backend/src/__tests__/middleware/: rateLimiter.test.ts
apps/backend/src/__tests__/routes/: health.test.ts  ingest.test.ts
apps/backend/src/config/: env.ts  logger.ts
apps/backend/src/crypto/: hash.ts
apps/backend/src/errors/: AppError.ts  handler.ts  types.ts
apps/backend/src/middleware/: rateLimiter.ts
apps/backend/src/plugins/: cors.ts  prisma.ts  redis.ts
apps/backend/src/services/: compliance.service.ts  farm.service.ts  reading.service.ts
apps/backend/src/solana/: client.ts  keypair.ts
apps/frontend/: index.html  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/frontend/src/: App.tsx  index.css  main.tsx
apps/frontend/src/__tests__/: setup.ts
apps/frontend/src/api/: client.ts  compliance.ts  farms.ts  readings.ts
apps/frontend/src/i18n/: config.ts
apps/frontend/src/pages/: DeSciMarketplace.tsx  EUDRReport.tsx  FarmOverview.tsx  Telemetry.tsx
programs/: Anchor.toml
programs/programs/groundtruth/: Cargo.toml
programs/programs/groundtruth/src/: lib.rs
simulator/: esp32-mock.ts  package.json  tsconfig.json
(+24 files in other folders)
