[package]
name = "groundtruth"
version = "0.1.0"
description = "GroundTruth — DePIN IoT Oracle for Solana LATAM Hackathon 2026"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "groundtruth"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "0.32.1"
